Progress in the supervisor